fix: lobbies breaking on mobile
Other changes:
- Fix there being a gap with having filters

--- a/styles/style.css
+++ b/styles/style.css
@@ -394,7 +394,8 @@ label {
   transition: 0.75s;
 }
 
-phantom-ui[filteredout="true"] > .lobby {
+phantom-ui[filteredout="true"]:not([loading]),
+phantom-ui[filteredout="true"]:not([loading]) > .lobby {
   display: none;
   visibility: hidden;
 }
